# chi-internship-labs

./: CMakeLists.txt
cmake-utils/: AddAssetsDirectory.cmake
solutions/: CMakeLists.txt
solutions/lab1/: CMakeLists.txt  Txt.cpp  Txt.h
solutions/lab2/: CMakeLists.txt  List.h  Pair.h
solutions/lab3/: CMakeLists.txt  L4.cpp  product.cpp  product.h  product_base.cpp  product_base.h  sale.cpp  sale.h  taxable_product.cpp  taxable_product.h
solutions/todo-list/: CMakeLists.txt  Job.cpp  Job.h  TimeParser.cpp  TimeParser.h  ToDoItem.cpp  ToDoItem.h  ToDoList.cpp  ToDoList.h  main.cpp
